新增现代化界面，并支持native打包